project/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: items
                port:
                  number: 8000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8001

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 8002
